# implenia_rust

./: .gitignore  Cargo.toml  index.html
src/: main.rs  routes.rs
src/components/: bindins.rs  constants.rs  images.rs  mod.rs  model.rs  popup_messages.rs  request.rs  send_weight.rs  state.rs  websocket.rs
src/components/utils/: mod.rs  set_get.rs  status_handler.rs
src/pages/: barcode_input.rs  barcode_scan.rs  contract.rs  enterpin.rs  language.rs  license_plate.rs  license_plate_view.rs  material.rs  mod.rs  process_direction.rs  retry.rs  signature.rs  thankyou.rs  vehicle.rs  weight_view.rs
