[package]
name = "implemenia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
yew-router = "0.16.0"
yew-agent = "0.1.0"
chrono = { version="0.4.19", features=["wasmbind"] }
wasm-bindgen-futures = "0.4.28"
wasm-bindgen = "0.2.78"
serde_json = "1.0.73"
serde = "1.0.131"
futures = "0.3"
serde-wasm-bindgen = "0.4.1"
js-sys = "0.3.55"
wasm-logger = "0.2.0"
log = "0.4.6"
lazy_static = "1.4.0"
serde_derive = "1.0.133"
gloo-timers = "0.2.2"
reqwest = { version = "0.11", features = ["json"] }

[dependencies.web-sys]
version = "0.3.55"
features = [
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
    'HtmlCanvasElement',
    "HtmlDialogElement",
    'CanvasRenderingContext2d',
    'Element',
    'CssStyleDeclaration'
]